# golfing-haskell-exts-judge

./: LICENSE  README.md  ext-golf-judge.cabal  extensions.txt  extensions_isovector.txt  isovector.hs  original.hs  test-imp-1.exts  test-imp-1.hs  test-imp-2.exts  test-imp-2.hs
src/: Exts.hs  Main.hs  Source.hs
